# toy-dab-ml

.github/workflows/: ci.yml
toy_dab_ml/: README.md  databricks.yml  pyproject.toml
toy_dab_ml/.github/workflows/: ci.yml
toy_dab_ml/resources/: sample_job.job.yml  toy_dab_ml_etl.pipeline.yml
toy_dab_ml/src/: sample_notebook.ipynb
toy_dab_ml/src/toy_dab_ml/: main.py
toy_dab_ml/src/toy_dab_ml_etl/: README.md
toy_dab_ml/src/toy_dab_ml_etl/transformations/: sample_trips_toy_dab_ml.py  sample_zones_toy_dab_ml.py
toy_dab_ml/tests/: sample_taxis_test.py
