[project]
name = "toy_dab_ml"
version = "0.0.1"
authors = [{ name = "caspr.fiu.2@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
    "mypy>=2.1.0",
]

[project.scripts]
main = "toy_dab_ml.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/sample_notebook.ipynb" = ["F821"]
"src/toy_dab_ml_etl/transformations/*.py" = ["F821"]
